yaml/eshq/02-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshq
  labels:
    name: eshq
spec:
  replicas: 1
  selector:
    matchLabels:
      name: eshq
  template:
    metadata:
      labels:
        name: eshq
    spec:
      containers:
      - name: eshq
        image:  registry.shpaq.org/elastic-hq:3.5.12
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 0.5
          limits:
            cpu: 1
        ports:
        - containerPort: 5000
          name: http
      tolerations:
        - effect: NoSchedule
          operator: Exists
      nodeSelector:                                                                                        
        kubernetes.io/os: linux                                                                            
        kubernetes.io/role: worker
        kubernetes.io/arch: arm64
