yaml/eshq/03-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: eshq
  labels:
    component: elasticsearch
    role: eshq
spec:
  selector:
    name: eshq
  ports:
  - name: http
    port: 5000
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
