yaml/eshq/04-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eshq
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.frontend.redirect.permanent: 'true'
    traefik.ingress.kubernetes.io/frontend-entry-points: http, https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: eshq-auth
spec:
  ingressClassName: traefik-lb
  rules:
  - host: eshq.shpaq.org
    http:
      paths:
      - backend:
          service:
            name: eshq
            port:
              number: 5000
        path: /
        pathType: Prefix
  tls:
  - secretName: eshq-shpaq-org-tls
    hosts:
      - eshq.shpaq.org
